--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ button {
 
 button:focus {
   outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
+  outline: 5px auto;
 }
 
 input,
